@@ -1,0 +1,7 @@
+<?xml version="1.0" encoding="utf-8"?>
+<ModSyncNinjaData>
+	<ID>6c29d486-35f9-49b1-bde2-1bec80db87da</ID>
+	<ModName>[sd] goodnight</ModName>
+	<Version>b18-1.0.0</Version>
+	<SaveBreaking>false</SaveBreaking>
+</ModSyncNinjaData>
