@@ -76,6 +76,10 @@ personal changelog for mod "sd_goodnight"
 	- update to b18
 	- fixed roots to <Defs>
 	- added research tab
+
+- 15/01/2018
+
+	- added modsync file
 	- fixed case sensitive xml tags
 	- fixed wrong heal per day for medieval bed to basic 3
 	- added new linkable endtable+dresser
